{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 187,
  "lineage": "8f8258de-27e0-b6b2-e558-8190e81bedac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0953a2203147b82be",
            "domain": "vpc",
            "id": "eipalloc-002bbcb09754eb582",
            "instance": "i-0b0cba0b5690bcc5e",
            "network_interface": "eni-0075cc4f1b17d3643",
            "private_dns": "ip-10-20-1-209.ap-southeast-1.compute.internal",
            "private_ip": "10.20.1.209",
            "public_dns": "ec2-18-138-112-233.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.112.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Circle eip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5a47f8865280111",
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:instance/i-0b0cba0b5690bcc5e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b0cba0b5690bcc5e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "circle-dev-ap-southeast-1",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0075cc4f1b17d3643"
              }
            ],
            "primary_network_interface_id": "eni-0075cc4f1b17d3643",
            "private_dns": "ip-10-20-1-209.ap-southeast-1.compute.internal",
            "private_ip": "10.20.1.209",
            "public_dns": "ec2-18-138-112-233.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.112.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0bd3e84533bb0e857",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b090fb0a85c852a2",
            "tags": {
              "Name": "Circle ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b8b552080b482533"
            ]
          },
          "depends_on": [
            "aws_network_interface.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bc687c7d23f06ffd",
            "owner_id": "027155467263",
            "tags": {
              "Name": "Circle gateway"
            },
            "vpc_id": "vpc-0e6090a3eccb5c8c4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-02e71a7cd7d302a01",
                "device_index": 0,
                "instance": "i-0b0cba0b5690bcc5e"
              }
            ],
            "id": "eni-0075cc4f1b17d3643",
            "private_dns_name": "ip-10-20-1-209.ap-southeast-1.compute.internal",
            "private_ip": "10.20.1.209",
            "private_ips": [
              "10.20.1.209"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b8b552080b482533"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b090fb0a85c852a2",
            "tags": {
              "Name": "Circle network interface"
            }
          },
          "depends_on": [
            "aws_security_group.sg",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bc687c7d23f06ffd",
            "id": "r-rtb-02cf40dc7214220a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cf40dc7214220a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_route_table.r"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02cf40dc7214220a7",
            "owner_id": "027155467263",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc687c7d23f06ffd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Circle route"
            },
            "vpc_id": "vpc-0e6090a3eccb5c8c4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fec0d86a0bbe4ba",
            "route_table_id": "rtb-02cf40dc7214220a7",
            "subnet_id": "subnet-0b090fb0a85c852a2"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d1d5fa936c6f51f",
            "route_table_id": "rtb-02cf40dc7214220a7",
            "subnet_id": "subnet-0472ff52976bb73b8"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a52d19fc54c795fa",
            "route_table_id": "rtb-02cf40dc7214220a7",
            "subnet_id": "subnet-05dcd9df17a26b86d"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_subnet.subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:security-group/sg-0b8b552080b482533",
            "description": "Allow circle inbound traffic",
            "egress": [],
            "id": "sg-0b8b552080b482533",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_circle",
            "name_prefix": null,
            "owner_id": "027155467263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_circle"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6090a3eccb5c8c4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:subnet/subnet-0b090fb0a85c852a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0b090fb0a85c852a2",
            "map_public_ip_on_launch": false,
            "owner_id": "027155467263",
            "tags": {
              "Name": "Circle subnet1"
            },
            "vpc_id": "vpc-0e6090a3eccb5c8c4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:subnet/subnet-0472ff52976bb73b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0472ff52976bb73b8",
            "map_public_ip_on_launch": false,
            "owner_id": "027155467263",
            "tags": {
              "Name": "Circle subnet2"
            },
            "vpc_id": "vpc-0e6090a3eccb5c8c4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:subnet/subnet-05dcd9df17a26b86d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-05dcd9df17a26b86d",
            "map_public_ip_on_launch": false,
            "owner_id": "027155467263",
            "tags": {
              "Name": "Circle subnet3"
            },
            "vpc_id": "vpc-0e6090a3eccb5c8c4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:vpc/vpc-0e6090a3eccb5c8c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ac3778c1b64029cf",
            "default_route_table_id": "rtb-0e756d15a68cbd2c7",
            "default_security_group_id": "sg-06795571585cacfc0",
            "dhcp_options_id": "dopt-67e0cc00",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e6090a3eccb5c8c4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e756d15a68cbd2c7",
            "owner_id": "027155467263",
            "tags": {
              "Name": "Circle vpc"
            }
          }
        }
      ]
    }
  ]
}